# My-Point-client

./: .gitignore  CMakeLists.txt  README.md
src/: AboutUs.qml  CMakeLists.txt  Database.js  HomeForm.ui.qml  Login.qml  LoginForm.ui.qml  MarkerForm.qml  MyRoom.qml  MyRoomForm.ui.qml  NewMarker.qml  NewMarkerForm.ui.qml  Page2Form.ui.qml  Registration.qml  RegistrationForm.ui.qml  forTest.qml  main.cpp  main.qml  maps.qml  myclient.cpp  myclient.h  qml.qrc  todolist.cpp  todolist.h  todomodel.cpp  todomodel.h  untitled3.pro
